{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 199,
  "lineage": "e22e6674-6f63-ebac-5011-188c134de9dc",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "c19c7c1pdpip-c19c7c1pdp6-ha",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.165.17.253",
            "address_type": "INTERNAL",
            "creation_timestamp": "2022-06-07T05:15:03.426-07:00",
            "id": "projects/c19c7-c1-dc-hst/regions/asia-south1/addresses/c19c7c1pdpip-c19c7c1pdp6-ha",
            "name": "c19c7c1pdpip-c19c7c1pdp6-ha",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "c19c7-c1-dc-hst",
            "purpose": "GCE_ENDPOINT",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/regions/asia-south1/addresses/c19c7c1pdpip-c19c7c1pdp6-ha",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/regions/asia-south1/subnetworks/c19c7c1pdpha-sb-01",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/zones/asia-south1-a/instances/c19c7c1pdp6"
            ]
          },
          "dependencies": [
            "module.c19c7c1pdpvc-07-subnets.google_compute_subnetwork.subnetwork",
            "module.c19c7c1pdpvc-07.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "c19c7c1pdpip-c19c7c1pdp6-ln",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.165.18.253",
            "address_type": "INTERNAL",
            "creation_timestamp": "2022-06-07T05:15:02.539-07:00",
            "id": "projects/c19c7-c1-dc-hst/regions/asia-south1/addresses/c19c7c1pdpip-c19c7c1pdp6-ln",
            "name": "c19c7c1pdpip-c19c7c1pdp6-ln",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "c19c7-c1-dc-hst",
            "purpose": "GCE_ENDPOINT",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/regions/asia-south1/addresses/c19c7c1pdpip-c19c7c1pdp6-ln",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/regions/asia-south1/subnetworks/c19c7c1pdpis-sb-01",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/zones/asia-south1-a/instances/c19c7c1pdp6"
            ]
          },
          "dependencies": [
            "module.c19c7c1pdpvc-03-subnets.google_compute_subnetwork.subnetwork",
            "module.c19c7c1pdpvc-03.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "c19c7c1pdpip-c19c7c1pdp6-mg",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.165.16.253",
            "address_type": "INTERNAL",
            "creation_timestamp": "2022-06-07T05:15:03.548-07:00",
            "id": "projects/c19c7-c1-dc-hst/regions/asia-south1/addresses/c19c7c1pdpip-c19c7c1pdp6-mg",
            "name": "c19c7c1pdpip-c19c7c1pdp6-mg",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "c19c7-c1-dc-hst",
            "purpose": "GCE_ENDPOINT",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/regions/asia-south1/addresses/c19c7c1pdpip-c19c7c1pdp6-mg",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/regions/asia-south1/subnetworks/c19c7c1pdpmg-sb-01",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/zones/asia-south1-a/instances/c19c7c1pdp6"
            ]
          },
          "dependencies": [
            "module.c19c7c1pdpvc-06-subnets.google_compute_subnetwork.subnetwork",
            "module.c19c7c1pdpvc-06.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "c19c7c1pdpip-c19c7c1pdp6-mg-ex",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.244.52.203",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-06-06T02:41:32.438-07:00",
            "id": "projects/c19c7-c1-dc-hst/regions/asia-south1/addresses/c19c7c1pdpip-c19c7c1pdp6-mg-ex",
            "name": "c19c7c1pdpip-c19c7c1pdp6-mg-ex",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "c19c7-c1-dc-hst",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/regions/asia-south1/addresses/c19c7c1pdpip-c19c7c1pdp6-mg-ex",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/zones/asia-south1-a/instances/c19c7c1pdp6"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "c19c7c1pdpip-c19c7c1pdp6-tr",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.165.17.125",
            "address_type": "INTERNAL",
            "creation_timestamp": "2022-06-07T05:15:03.464-07:00",
            "id": "projects/c19c7-c1-dc-hst/regions/asia-south1/addresses/c19c7c1pdpip-c19c7c1pdp6-tr",
            "name": "c19c7c1pdpip-c19c7c1pdp6-tr",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "c19c7-c1-dc-hst",
            "purpose": "GCE_ENDPOINT",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/regions/asia-south1/addresses/c19c7c1pdpip-c19c7c1pdp6-tr",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/regions/asia-south1/subnetworks/c19c7c1pdpgw-sb-01",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/zones/asia-south1-a/instances/c19c7c1pdp6"
            ]
          },
          "dependencies": [
            "module.c19c7c1pdpvc-02-subnets.google_compute_subnetwork.subnetwork",
            "module.c19c7c1pdpvc-02.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "c19c7c1pdpip-c19c7c1pdp6-wn",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.165.16.125",
            "address_type": "INTERNAL",
            "creation_timestamp": "2022-06-07T05:15:02.632-07:00",
            "id": "projects/c19c7-c1-dc-hst/regions/asia-south1/addresses/c19c7c1pdpip-c19c7c1pdp6-wn",
            "name": "c19c7c1pdpip-c19c7c1pdp6-wn",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "c19c7-c1-dc-hst",
            "purpose": "GCE_ENDPOINT",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/regions/asia-south1/addresses/c19c7c1pdpip-c19c7c1pdp6-wn",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/regions/asia-south1/subnetworks/c19c7c1pdpfw-sb-01",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/zones/asia-south1-a/instances/c19c7c1pdp6"
            ]
          },
          "dependencies": [
            "module.c19c7c1pdpvc-01-subnets.google_compute_subnetwork.subnetwork",
            "module.c19c7c1pdpvc-01.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "c19c7c1pdpip-c19c7c1pdp6-wn-ex",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.93.43.207",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-06-06T02:41:32.350-07:00",
            "id": "projects/c19c7-c1-dc-hst/regions/asia-south1/addresses/c19c7c1pdpip-c19c7c1pdp6-wn-ex",
            "name": "c19c7c1pdpip-c19c7c1pdp6-wn-ex",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "c19c7-c1-dc-hst",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/regions/asia-south1/addresses/c19c7c1pdpip-c19c7c1pdp6-wn-ex",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/zones/asia-south1-a/instances/c19c7c1pdp6"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "c19c7c1pdpip-c19c7c1pdp7-ha",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.165.17.252",
            "address_type": "INTERNAL",
            "creation_timestamp": "2022-06-07T05:21:53.242-07:00",
            "id": "projects/c19c7-c1-dc-hst/regions/asia-south1/addresses/c19c7c1pdpip-c19c7c1pdp7-ha",
            "name": "c19c7c1pdpip-c19c7c1pdp7-ha",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "c19c7-c1-dc-hst",
            "purpose": "GCE_ENDPOINT",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/regions/asia-south1/addresses/c19c7c1pdpip-c19c7c1pdp7-ha",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/regions/asia-south1/subnetworks/c19c7c1pdpha-sb-01",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/zones/asia-south1-b/instances/c19c7c1pdp7"
            ]
          },
          "dependencies": [
            "module.c19c7c1pdpvc-07-subnets.google_compute_subnetwork.subnetwork",
            "module.c19c7c1pdpvc-07.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "c19c7c1pdpip-c19c7c1pdp7-ln",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.165.18.252",
            "address_type": "INTERNAL",
            "creation_timestamp": "2022-06-07T05:21:53.231-07:00",
            "id": "projects/c19c7-c1-dc-hst/regions/asia-south1/addresses/c19c7c1pdpip-c19c7c1pdp7-ln",
            "name": "c19c7c1pdpip-c19c7c1pdp7-ln",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "c19c7-c1-dc-hst",
            "purpose": "GCE_ENDPOINT",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/regions/asia-south1/addresses/c19c7c1pdpip-c19c7c1pdp7-ln",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/regions/asia-south1/subnetworks/c19c7c1pdpis-sb-01",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/zones/asia-south1-b/instances/c19c7c1pdp7"
            ]
          },
          "dependencies": [
            "module.c19c7c1pdpvc-03-subnets.google_compute_subnetwork.subnetwork",
            "module.c19c7c1pdpvc-03.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "c19c7c1pdpip-c19c7c1pdp7-mg",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.165.16.252",
            "address_type": "INTERNAL",
            "creation_timestamp": "2022-06-07T05:21:52.267-07:00",
            "id": "projects/c19c7-c1-dc-hst/regions/asia-south1/addresses/c19c7c1pdpip-c19c7c1pdp7-mg",
            "name": "c19c7c1pdpip-c19c7c1pdp7-mg",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "c19c7-c1-dc-hst",
            "purpose": "GCE_ENDPOINT",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/regions/asia-south1/addresses/c19c7c1pdpip-c19c7c1pdp7-mg",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/regions/asia-south1/subnetworks/c19c7c1pdpmg-sb-01",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/zones/asia-south1-b/instances/c19c7c1pdp7"
            ]
          },
          "dependencies": [
            "module.c19c7c1pdpvc-06-subnets.google_compute_subnetwork.subnetwork",
            "module.c19c7c1pdpvc-06.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "c19c7c1pdpip-c19c7c1pdp7-mg-ex",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.93.52.183",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-06-06T04:12:41.243-07:00",
            "id": "projects/c19c7-c1-dc-hst/regions/asia-south1/addresses/c19c7c1pdpip-c19c7c1pdp7-mg-ex",
            "name": "c19c7c1pdpip-c19c7c1pdp7-mg-ex",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "c19c7-c1-dc-hst",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/regions/asia-south1/addresses/c19c7c1pdpip-c19c7c1pdp7-mg-ex",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/zones/asia-south1-b/instances/c19c7c1pdp7"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "c19c7c1pdpip-c19c7c1pdp7-tr",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.165.17.124",
            "address_type": "INTERNAL",
            "creation_timestamp": "2022-06-07T05:21:53.237-07:00",
            "id": "projects/c19c7-c1-dc-hst/regions/asia-south1/addresses/c19c7c1pdpip-c19c7c1pdp7-tr",
            "name": "c19c7c1pdpip-c19c7c1pdp7-tr",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "c19c7-c1-dc-hst",
            "purpose": "GCE_ENDPOINT",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/regions/asia-south1/addresses/c19c7c1pdpip-c19c7c1pdp7-tr",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/regions/asia-south1/subnetworks/c19c7c1pdpgw-sb-01",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/zones/asia-south1-b/instances/c19c7c1pdp7"
            ]
          },
          "dependencies": [
            "module.c19c7c1pdpvc-02-subnets.google_compute_subnetwork.subnetwork",
            "module.c19c7c1pdpvc-02.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "c19c7c1pdpip-c19c7c1pdp7-wn",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.165.16.124",
            "address_type": "INTERNAL",
            "creation_timestamp": "2022-06-07T05:21:53.132-07:00",
            "id": "projects/c19c7-c1-dc-hst/regions/asia-south1/addresses/c19c7c1pdpip-c19c7c1pdp7-wn",
            "name": "c19c7c1pdpip-c19c7c1pdp7-wn",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "c19c7-c1-dc-hst",
            "purpose": "GCE_ENDPOINT",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/regions/asia-south1/addresses/c19c7c1pdpip-c19c7c1pdp7-wn",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/regions/asia-south1/subnetworks/c19c7c1pdpfw-sb-01",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/zones/asia-south1-b/instances/c19c7c1pdp7"
            ]
          },
          "dependencies": [
            "module.c19c7c1pdpvc-01-subnets.google_compute_subnetwork.subnetwork",
            "module.c19c7c1pdpvc-01.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "c19c7c1pdpfr-al-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2022-06-06T06:40:14.664-07:00",
            "deny": [],
            "description": "Allow All Ports",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/c19c7-c1-dc-hst/global/firewalls/c19c7c1pdpfr-al-01",
            "log_config": [],
            "name": "c19c7c1pdpfr-al-01",
            "network": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/global/networks/c19c7c1pdpvc-02",
            "priority": 1000,
            "project": "c19c7-c1-dc-hst",
            "self_link": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/global/firewalls/c19c7c1pdpfr-al-01",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [
              "c19c7c1pdpfr-al-01"
            ],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.c19c7c1pdpvc-02.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "c19c7c1pdpfr-al-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2022-06-06T06:40:14.600-07:00",
            "deny": [],
            "description": "Allow All Ports",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/c19c7-c1-dc-hst/global/firewalls/c19c7c1pdpfr-al-02",
            "log_config": [],
            "name": "c19c7c1pdpfr-al-02",
            "network": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/global/networks/c19c7c1pdpvc-03",
            "priority": 1000,
            "project": "c19c7-c1-dc-hst",
            "self_link": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/global/firewalls/c19c7c1pdpfr-al-02",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [
              "c19c7c1pdpfr-al-02"
            ],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.c19c7c1pdpvc-03.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "c19c7c1pdpfr-al-03",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2022-06-06T06:40:14.601-07:00",
            "deny": [],
            "description": "Allow All Ports",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/c19c7-c1-dc-hst/global/firewalls/c19c7c1pdpfr-al-03",
            "log_config": [],
            "name": "c19c7c1pdpfr-al-03",
            "network": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/global/networks/c19c7c1pdpvc-04",
            "priority": 1000,
            "project": "c19c7-c1-dc-hst",
            "self_link": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/global/firewalls/c19c7c1pdpfr-al-03",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [
              "c19c7c1pdpfr-al-03"
            ],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.c19c7c1pdpvc-04.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "c19c7c1pdpfr-al-04",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2022-06-06T06:40:14.555-07:00",
            "deny": [],
            "description": "Allow All Ports",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/c19c7-c1-dc-hst/global/firewalls/c19c7c1pdpfr-al-04",
            "log_config": [],
            "name": "c19c7c1pdpfr-al-04",
            "network": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/global/networks/c19c7c1pdnvc-05",
            "priority": 1000,
            "project": "c19c7-c1-dc-hst",
            "self_link": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/global/firewalls/c19c7c1pdpfr-al-04",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [
              "c19c7c1pdpfr-al-04"
            ],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.c19c7c1pdnvc-05.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "c19c7c1pdpfr-al-05",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2022-06-06T06:40:14.556-07:00",
            "deny": [],
            "description": "Allow All Ports",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/c19c7-c1-dc-hst/global/firewalls/c19c7c1pdpfr-al-05",
            "log_config": [],
            "name": "c19c7c1pdpfr-al-05",
            "network": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/global/networks/c19c7c1pdpvc-07",
            "priority": 1000,
            "project": "c19c7-c1-dc-hst",
            "self_link": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/global/firewalls/c19c7c1pdpfr-al-05",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [
              "c19c7c1pdpfr-al-05"
            ],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.c19c7c1pdpvc-07.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "c19c7c1pdpfr-bl-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [],
            "creation_timestamp": "2022-06-06T06:27:25.967-07:00",
            "deny": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "description": "Block All Ports",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/c19c7-c1-dc-hst/global/firewalls/c19c7c1pdpfr-bl-01",
            "log_config": [],
            "name": "c19c7c1pdpfr-bl-01",
            "network": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/global/networks/c19c7c1pdpvc-01",
            "priority": 1000,
            "project": "c19c7-c1-dc-hst",
            "self_link": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/global/firewalls/c19c7c1pdpfr-bl-01",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.c19c7c1pdpvc-01.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "c19c7c1pdpfr-bl-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [],
            "creation_timestamp": "2022-06-06T06:40:14.678-07:00",
            "deny": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "description": "Block All Ports",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/c19c7-c1-dc-hst/global/firewalls/c19c7c1pdpfr-bl-02",
            "log_config": [],
            "name": "c19c7c1pdpfr-bl-02",
            "network": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/global/networks/c19c7c1pdpvc-06",
            "priority": 1000,
            "project": "c19c7-c1-dc-hst",
            "self_link": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/global/firewalls/c19c7c1pdpfr-bl-02",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.c19c7c1pdpvc-06.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "c19c7c1pdpfr-fg-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "3000",
                  "443",
                  "54",
                  "80",
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-06-06T06:40:14.621-07:00",
            "deny": [],
            "description": "Allow fortigate tcp ports",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/c19c7-c1-dc-hst/global/firewalls/c19c7c1pdpfr-fg-01",
            "log_config": [],
            "name": "c19c7c1pdpfr-fg-01",
            "network": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/global/networks/c19c7c1pdpvc-01",
            "priority": 1000,
            "project": "c19c7-c1-dc-hst",
            "self_link": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/global/firewalls/c19c7c1pdpfr-fg-01",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "c19c7c1pdpfr-fg-01"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.c19c7c1pdpvc-01.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "c19c7c1pdpfr-fg-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "3000",
                  "443",
                  "54",
                  "80",
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-06-06T06:40:14.674-07:00",
            "deny": [],
            "description": "Allow fortigate tcp ports",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/c19c7-c1-dc-hst/global/firewalls/c19c7c1pdpfr-fg-02",
            "log_config": [],
            "name": "c19c7c1pdpfr-fg-02",
            "network": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/global/networks/c19c7c1pdpvc-06",
            "priority": 1000,
            "project": "c19c7-c1-dc-hst",
            "self_link": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/global/firewalls/c19c7c1pdpfr-fg-02",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "c19c7c1pdpfr-fg-02"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.c19c7c1pdpvc-06.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "c19c7c1pdpfr-rd-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3389"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-06-09T02:47:34.960-07:00",
            "deny": [],
            "description": "Allow RDP Access on Jumpbox",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/c19c7-c1-dc-hst/global/firewalls/c19c7c1pdpfr-rd-01",
            "log_config": [],
            "name": "c19c7c1pdpfr-rd-01",
            "network": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/global/networks/c19c7c1pdpvc-03",
            "priority": 1000,
            "project": "c19c7-c1-dc-hst",
            "self_link": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/global/firewalls/c19c7c1pdpfr-rd-01",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "c19c7c1pdpfr-rd-01"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.c19c7c1pdpvc-03.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "c19c7c1pdp6",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "attached_disk": [
              {
                "device_name": "persistent-disk-1",
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/zones/asia-south1-a/disks/c19c7c1pdppd-c19c7c1pdp6-01"
              }
            ],
            "boot_disk": [
              {
                "auto_delete": false,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/fortigcp-project-001/global/images/fortinet-fgt-705-20220211-001-w-license",
                    "size": 10,
                    "type": "pd-ssd"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/zones/asia-south1-a/disks/c19c7c1pdp6"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Cascade Lake",
            "current_status": "RUNNING",
            "deletion_protection": true,
            "description": "Fortigate Server in HA",
            "enable_display": false,
            "id": "projects/c19c7-c1-dc-hst/zones/asia-south1-a/instances/c19c7c1pdp6",
            "instance_id": "3232250213824655570",
            "label_fingerprint": "7C-85KMPr-w=",
            "labels": {
              "backup": "yes",
              "costcenter": "c19c7",
              "environment": "prd",
              "optimization": "no",
              "vmrole": "fw"
            },
            "machine_type": "n2-standard-8",
            "metadata_fingerprint": "SuK1vWXPAhw=",
            "name": "c19c7c1pdp6",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.93.43.207",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/global/networks/c19c7c1pdpvc-01",
                "network_ip": "10.165.16.125",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/regions/asia-south1/subnetworks/c19c7c1pdpfw-sb-01",
                "subnetwork_project": "c19c7-c1-dc-hst"
              },
              {
                "name": "nic1",
                "network": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/global/networks/c19c7c1pdpvc-02",
                "network_ip": "10.165.17.125",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/regions/asia-south1/subnetworks/c19c7c1pdpgw-sb-01",
                "subnetwork_project": "c19c7-c1-dc-hst"
              },
              {
                "name": "nic2",
                "network": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/global/networks/c19c7c1pdpvc-03",
                "network_ip": "10.165.18.253",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/regions/asia-south1/subnetworks/c19c7c1pdpis-sb-01",
                "subnetwork_project": "c19c7-c1-dc-hst"
              },
              {
                "access_config": [
                  {
                    "nat_ip": "35.244.52.203",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic3",
                "network": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/global/networks/c19c7c1pdpvc-06",
                "network_ip": "10.165.16.253",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/regions/asia-south1/subnetworks/c19c7c1pdpmg-sb-01",
                "subnetwork_project": "c19c7-c1-dc-hst"
              },
              {
                "name": "nic4",
                "network": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/global/networks/c19c7c1pdpvc-07",
                "network_ip": "10.165.17.253",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/regions/asia-south1/subnetworks/c19c7c1pdpha-sb-01",
                "subnetwork_project": "c19c7-c1-dc-hst"
              }
            ],
            "project": "c19c7-c1-dc-hst",
            "scheduling": [
              {
                "automatic_restart": false,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/zones/asia-south1-a/instances/c19c7c1pdp6",
            "service_account": [
              {
                "email": "c19c7c1pdpci-sa-01@c19c7-c1-dc-hst.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform",
                  "https://www.googleapis.com/auth/compute.readonly",
                  "https://www.googleapis.com/auth/userinfo.email"
                ]
              }
            ],
            "tags": [
              "c19c7c1pdpfr-al-01",
              "c19c7c1pdpfr-al-02",
              "c19c7c1pdpfr-al-03",
              "c19c7c1pdpfr-al-04",
              "c19c7c1pdpfr-al-05",
              "c19c7c1pdpfr-fg-01",
              "c19c7c1pdpfr-fg-02"
            ],
            "tags_fingerprint": "unrsyvGEZLw=",
            "zone": "asia-south1-a"
          },
          "dependencies": [
            "google_compute_address.c19c7c1pdpip-c19c7c1pdp6-ha",
            "google_compute_address.c19c7c1pdpip-c19c7c1pdp6-ln",
            "google_compute_address.c19c7c1pdpip-c19c7c1pdp6-mg",
            "google_compute_address.c19c7c1pdpip-c19c7c1pdp6-mg-ex",
            "google_compute_address.c19c7c1pdpip-c19c7c1pdp6-tr",
            "google_compute_address.c19c7c1pdpip-c19c7c1pdp6-wn",
            "google_compute_address.c19c7c1pdpip-c19c7c1pdp6-wn-ex",
            "google_compute_disk.c19c7c1pdppd-c19c7c1pdp6-01",
            "module.c19c7c1pdpci-sa-01.google_service_account.service_accounts",
            "module.c19c7c1pdpvc-01-subnets.google_compute_subnetwork.subnetwork",
            "module.c19c7c1pdpvc-01.google_compute_network.network",
            "module.c19c7c1pdpvc-02-subnets.google_compute_subnetwork.subnetwork",
            "module.c19c7c1pdpvc-02.google_compute_network.network",
            "module.c19c7c1pdpvc-03-subnets.google_compute_subnetwork.subnetwork",
            "module.c19c7c1pdpvc-03.google_compute_network.network",
            "module.c19c7c1pdpvc-06-subnets.google_compute_subnetwork.subnetwork",
            "module.c19c7c1pdpvc-06.google_compute_network.network",
            "module.c19c7c1pdpvc-07-subnets.google_compute_subnetwork.subnetwork",
            "module.c19c7c1pdpvc-07.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "c19c7c1pdp7",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "attached_disk": [
              {
                "device_name": "persistent-disk-1",
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/zones/asia-south1-b/disks/c19c7c1pdppd-c19c7c1pdp7-01"
              }
            ],
            "boot_disk": [
              {
                "auto_delete": false,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/fortigcp-project-001/global/images/fortinet-fgt-705-20220211-001-w-license",
                    "size": 10,
                    "type": "pd-ssd"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/zones/asia-south1-b/disks/c19c7c1pdp7"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Cascade Lake",
            "current_status": "RUNNING",
            "deletion_protection": true,
            "description": "Fortigate Server in HA",
            "enable_display": false,
            "id": "projects/c19c7-c1-dc-hst/zones/asia-south1-b/instances/c19c7c1pdp7",
            "instance_id": "1761222549145055442",
            "label_fingerprint": "7C-85KMPr-w=",
            "labels": {
              "backup": "yes",
              "costcenter": "c19c7",
              "environment": "prd",
              "optimization": "no",
              "vmrole": "fw"
            },
            "machine_type": "n2-standard-8",
            "metadata_fingerprint": "SuK1vWXPAhw=",
            "name": "c19c7c1pdp7",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/global/networks/c19c7c1pdpvc-01",
                "network_ip": "10.165.16.124",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/regions/asia-south1/subnetworks/c19c7c1pdpfw-sb-01",
                "subnetwork_project": "c19c7-c1-dc-hst"
              },
              {
                "name": "nic1",
                "network": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/global/networks/c19c7c1pdpvc-02",
                "network_ip": "10.165.17.124",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/regions/asia-south1/subnetworks/c19c7c1pdpgw-sb-01",
                "subnetwork_project": "c19c7-c1-dc-hst"
              },
              {
                "name": "nic2",
                "network": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/global/networks/c19c7c1pdpvc-03",
                "network_ip": "10.165.18.252",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/regions/asia-south1/subnetworks/c19c7c1pdpis-sb-01",
                "subnetwork_project": "c19c7-c1-dc-hst"
              },
              {
                "access_config": [
                  {
                    "nat_ip": "34.93.52.183",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic3",
                "network": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/global/networks/c19c7c1pdpvc-06",
                "network_ip": "10.165.16.252",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/regions/asia-south1/subnetworks/c19c7c1pdpmg-sb-01",
                "subnetwork_project": "c19c7-c1-dc-hst"
              },
              {
                "name": "nic4",
                "network": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/global/networks/c19c7c1pdpvc-07",
                "network_ip": "10.165.17.252",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/regions/asia-south1/subnetworks/c19c7c1pdpha-sb-01",
                "subnetwork_project": "c19c7-c1-dc-hst"
              }
            ],
            "project": "c19c7-c1-dc-hst",
            "scheduling": [
              {
                "automatic_restart": false,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/zones/asia-south1-b/instances/c19c7c1pdp7",
            "service_account": [
              {
                "email": "c19c7c1pdpci-sa-01@c19c7-c1-dc-hst.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform",
                  "https://www.googleapis.com/auth/compute.readonly",
                  "https://www.googleapis.com/auth/userinfo.email"
                ]
              }
            ],
            "tags": [
              "c19c7c1pdpfr-al-01",
              "c19c7c1pdpfr-al-02",
              "c19c7c1pdpfr-al-03",
              "c19c7c1pdpfr-al-04",
              "c19c7c1pdpfr-al-05",
              "c19c7c1pdpfr-fg-01",
              "c19c7c1pdpfr-fg-02"
            ],
            "tags_fingerprint": "unrsyvGEZLw=",
            "zone": "asia-south1-b"
          },
          "dependencies": [
            "google_compute_address.c19c7c1pdpip-c19c7c1pdp7-ha",
            "google_compute_address.c19c7c1pdpip-c19c7c1pdp7-ln",
            "google_compute_address.c19c7c1pdpip-c19c7c1pdp7-mg",
            "google_compute_address.c19c7c1pdpip-c19c7c1pdp7-mg-ex",
            "google_compute_address.c19c7c1pdpip-c19c7c1pdp7-tr",
            "google_compute_address.c19c7c1pdpip-c19c7c1pdp7-wn",
            "google_compute_disk.c19c7c1pdppd-c19c7c1pdp7-01",
            "module.c19c7c1pdpci-sa-01.google_service_account.service_accounts",
            "module.c19c7c1pdpvc-01-subnets.google_compute_subnetwork.subnetwork",
            "module.c19c7c1pdpvc-01.google_compute_network.network",
            "module.c19c7c1pdpvc-02-subnets.google_compute_subnetwork.subnetwork",
            "module.c19c7c1pdpvc-02.google_compute_network.network",
            "module.c19c7c1pdpvc-03-subnets.google_compute_subnetwork.subnetwork",
            "module.c19c7c1pdpvc-03.google_compute_network.network",
            "module.c19c7c1pdpvc-06-subnets.google_compute_subnetwork.subnetwork",
            "module.c19c7c1pdpvc-06.google_compute_network.network",
            "module.c19c7c1pdpvc-07-subnets.google_compute_subnetwork.subnetwork",
            "module.c19c7c1pdpvc-07.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.c19c7c1pdnvc-05",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": true,
            "description": "SAP Non-Prod VPC (Spoke)",
            "id": "projects/c19c7-c1-dc-hst/global/networks/c19c7c1pdnvc-05",
            "mtu": 0,
            "name": "c19c7c1pdnvc-05",
            "project": "c19c7-c1-dc-hst",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/global/networks/c19c7c1pdnvc-05"
          }
        }
      ]
    },
    {
      "module": "module.c19c7c1pdnvc-05-subnets",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "asia-south1/c19c7c1pdnap-sb-01",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-06-01T05:33:45.066-07:00",
            "description": "App Subnet (Non-Prod)",
            "gateway_address": "10.165.20.1",
            "id": "projects/c19c7-c1-dc-hst/regions/asia-south1/subnetworks/c19c7c1pdnap-sb-01",
            "ip_cidr_range": "10.165.20.0/25",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_5_SEC",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "c19c7c1pdnap-sb-01",
            "network": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/global/networks/c19c7c1pdnvc-05",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "c19c7-c1-dc-hst",
            "purpose": "PRIVATE",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/regions/asia-south1/subnetworks/c19c7c1pdnap-sb-01",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.c19c7c1pdnvc-05.google_compute_network.network"
          ]
        },
        {
          "index_key": "asia-south1/c19c7c1pdndb-sb-01",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-06-01T05:33:45.796-07:00",
            "description": "DB subnet (Non-Prod)",
            "gateway_address": "10.165.20.129",
            "id": "projects/c19c7-c1-dc-hst/regions/asia-south1/subnetworks/c19c7c1pdndb-sb-01",
            "ip_cidr_range": "10.165.20.128/25",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_5_SEC",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "c19c7c1pdndb-sb-01",
            "network": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/global/networks/c19c7c1pdnvc-05",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "c19c7-c1-dc-hst",
            "purpose": "PRIVATE",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/regions/asia-south1/subnetworks/c19c7c1pdndb-sb-01",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.c19c7c1pdnvc-05.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.c19c7c1pdpcr-01",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "CUSTOM",
                "advertised_groups": [
                  "ALL_SUBNETS"
                ],
                "asn": 16550
              }
            ],
            "creation_timestamp": "2022-06-03T01:42:53.862-07:00",
            "description": "PD Router for TATA VLAN 01",
            "id": "projects/c19c7-c1-dc-hst/regions/asia-south1/routers/c19c7c1pdpcr-01",
            "name": "c19c7c1pdpcr-01",
            "network": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/global/networks/c19c7c1pdpvc-02",
            "project": "c19c7-c1-dc-hst",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/regions/asia-south1/routers/c19c7c1pdpcr-01"
          },
          "dependencies": [
            "module.c19c7c1pdpvc-02-subnets.google_compute_subnetwork.subnetwork",
            "module.c19c7c1pdpvc-02.google_compute_network.network",
            "module.c19c7c1pdpvc-02.google_compute_shared_vpc_host_project.shared_vpc_host"
          ]
        }
      ]
    },
    {
      "module": "module.c19c7c1pdpcr-02",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "CUSTOM",
                "advertised_groups": [
                  "ALL_SUBNETS"
                ],
                "asn": 16550
              }
            ],
            "creation_timestamp": "2022-06-03T01:42:54.292-07:00",
            "description": "PD Router for  TATA VLAN 02",
            "id": "projects/c19c7-c1-dc-hst/regions/asia-south1/routers/c19c7c1pdpcr-02",
            "name": "c19c7c1pdpcr-02",
            "network": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/global/networks/c19c7c1pdpvc-02",
            "project": "c19c7-c1-dc-hst",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/regions/asia-south1/routers/c19c7c1pdpcr-02"
          },
          "dependencies": [
            "module.c19c7c1pdpvc-02-subnets.google_compute_subnetwork.subnetwork",
            "module.c19c7c1pdpvc-02.google_compute_network.network",
            "module.c19c7c1pdpvc-02.google_compute_shared_vpc_host_project.shared_vpc_host"
          ]
        }
      ]
    },
    {
      "module": "module.c19c7c1pdpcr-03",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "CUSTOM",
                "advertised_groups": [
                  "ALL_SUBNETS"
                ],
                "asn": 16550
              }
            ],
            "creation_timestamp": "2022-06-03T01:42:57.608-07:00",
            "description": "PD Router for  AIRTEL VLAN 03",
            "id": "projects/c19c7-c1-dc-hst/regions/asia-south1/routers/c19c7c1pdpcr-03",
            "name": "c19c7c1pdpcr-03",
            "network": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/global/networks/c19c7c1pdpvc-02",
            "project": "c19c7-c1-dc-hst",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/regions/asia-south1/routers/c19c7c1pdpcr-03"
          },
          "dependencies": [
            "module.c19c7c1pdpvc-02-subnets.google_compute_subnetwork.subnetwork",
            "module.c19c7c1pdpvc-02.google_compute_network.network",
            "module.c19c7c1pdpvc-02.google_compute_shared_vpc_host_project.shared_vpc_host"
          ]
        }
      ]
    },
    {
      "module": "module.c19c7c1pdpcr-04",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "CUSTOM",
                "advertised_groups": [
                  "ALL_SUBNETS"
                ],
                "asn": 16550
              }
            ],
            "creation_timestamp": "2022-06-03T01:42:55.508-07:00",
            "description": "PD Router for  AIRTEL VLAN 04",
            "id": "projects/c19c7-c1-dc-hst/regions/asia-south1/routers/c19c7c1pdpcr-04",
            "name": "c19c7c1pdpcr-04",
            "network": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/global/networks/c19c7c1pdpvc-02",
            "project": "c19c7-c1-dc-hst",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/regions/asia-south1/routers/c19c7c1pdpcr-04"
          },
          "dependencies": [
            "module.c19c7c1pdpvc-02-subnets.google_compute_subnetwork.subnetwork",
            "module.c19c7c1pdpvc-02.google_compute_network.network",
            "module.c19c7c1pdpvc-02.google_compute_shared_vpc_host_project.shared_vpc_host"
          ]
        }
      ]
    },
    {
      "module": "module.c19c7c1pdpvc-01",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "description": "External Network VPC (Untrust)",
            "id": "projects/c19c7-c1-dc-hst/global/networks/c19c7c1pdpvc-01",
            "mtu": 0,
            "name": "c19c7c1pdpvc-01",
            "project": "c19c7-c1-dc-hst",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/global/networks/c19c7c1pdpvc-01"
          }
        }
      ]
    },
    {
      "module": "module.c19c7c1pdpvc-01-subnets",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "asia-south1/c19c7c1pdpfw-sb-01",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-06-01T05:33:22.892-07:00",
            "description": "FW Subnet (External)",
            "gateway_address": "10.165.16.1",
            "id": "projects/c19c7-c1-dc-hst/regions/asia-south1/subnetworks/c19c7c1pdpfw-sb-01",
            "ip_cidr_range": "10.165.16.0/25",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_5_SEC",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "c19c7c1pdpfw-sb-01",
            "network": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/global/networks/c19c7c1pdpvc-01",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "c19c7-c1-dc-hst",
            "purpose": "PRIVATE",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/regions/asia-south1/subnetworks/c19c7c1pdpfw-sb-01",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.c19c7c1pdpvc-01.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.c19c7c1pdpvc-02",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": true,
            "description": "Transit Network VPC (Gateway)",
            "id": "projects/c19c7-c1-dc-hst/global/networks/c19c7c1pdpvc-02",
            "mtu": 0,
            "name": "c19c7c1pdpvc-02",
            "project": "c19c7-c1-dc-hst",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/global/networks/c19c7c1pdpvc-02"
          }
        }
      ]
    },
    {
      "module": "module.c19c7c1pdpvc-02-routes",
      "mode": "managed",
      "type": "google_compute_route",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "c19c7c1pdprt-01",
          "schema_version": 0,
          "attributes": {
            "description": "Default Route towards FortiGate Firewall from Transit VPC in DC",
            "dest_range": "0.0.0.0/0",
            "id": "projects/c19c7-c1-dc-hst/global/routes/c19c7c1pdprt-01",
            "name": "c19c7c1pdprt-01",
            "network": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/global/networks/c19c7c1pdpvc-02",
            "next_hop_gateway": "",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "10.165.17.125",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 1000,
            "project": "c19c7-c1-dc-hst",
            "self_link": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/global/routes/c19c7c1pdprt-01",
            "tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.c19c7c1pdpvc-02.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.c19c7c1pdpvc-02-subnets",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "asia-south1/c19c7c1pdpgw-sb-01",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-06-01T05:33:22.456-07:00",
            "description": "GW Subnet (Transit)",
            "gateway_address": "10.165.17.1",
            "id": "projects/c19c7-c1-dc-hst/regions/asia-south1/subnetworks/c19c7c1pdpgw-sb-01",
            "ip_cidr_range": "10.165.17.0/25",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_5_SEC",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "c19c7c1pdpgw-sb-01",
            "network": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/global/networks/c19c7c1pdpvc-02",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "c19c7-c1-dc-hst",
            "purpose": "PRIVATE",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/regions/asia-south1/subnetworks/c19c7c1pdpgw-sb-01",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.c19c7c1pdpvc-02.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.c19c7c1pdpvc-03",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": true,
            "description": "Infra \u0026 Shared subnet (Hub)",
            "id": "projects/c19c7-c1-dc-hst/global/networks/c19c7c1pdpvc-03",
            "mtu": 0,
            "name": "c19c7c1pdpvc-03",
            "project": "c19c7-c1-dc-hst",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/global/networks/c19c7c1pdpvc-03"
          }
        }
      ]
    },
    {
      "module": "module.c19c7c1pdpvc-03-routes",
      "mode": "managed",
      "type": "google_compute_route",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "c19c7c1pdprt-02",
          "schema_version": 0,
          "attributes": {
            "description": "Default Route towards FortiGate Firewall  From Shared Services VPC  in DC",
            "dest_range": "0.0.0.0/0",
            "id": "projects/c19c7-c1-dc-hst/global/routes/c19c7c1pdprt-02",
            "name": "c19c7c1pdprt-02",
            "network": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/global/networks/c19c7c1pdpvc-03",
            "next_hop_gateway": "",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "10.165.18.253",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 1000,
            "project": "c19c7-c1-dc-hst",
            "self_link": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/global/routes/c19c7c1pdprt-02",
            "tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.c19c7c1pdpvc-03.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.c19c7c1pdpvc-03-subnets",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "asia-south1/c19c7c1pdpis-sb-01",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-06-01T05:33:22.566-07:00",
            "description": "Infra Subnet",
            "gateway_address": "10.165.18.1",
            "id": "projects/c19c7-c1-dc-hst/regions/asia-south1/subnetworks/c19c7c1pdpis-sb-01",
            "ip_cidr_range": "10.165.18.0/24",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_5_SEC",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "c19c7c1pdpis-sb-01",
            "network": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/global/networks/c19c7c1pdpvc-03",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "c19c7-c1-dc-hst",
            "purpose": "PRIVATE",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/regions/asia-south1/subnetworks/c19c7c1pdpis-sb-01",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.c19c7c1pdpvc-03.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.c19c7c1pdpvc-04",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": true,
            "description": "SAP Prod VPC (Spoke)",
            "id": "projects/c19c7-c1-dc-hst/global/networks/c19c7c1pdpvc-04",
            "mtu": 0,
            "name": "c19c7c1pdpvc-04",
            "project": "c19c7-c1-dc-hst",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/global/networks/c19c7c1pdpvc-04"
          }
        }
      ]
    },
    {
      "module": "module.c19c7c1pdpvc-04-subnets",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "asia-south1/c19c7c1pdpap-sb-01",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-06-01T05:33:22.631-07:00",
            "description": "App Subnet (Prod)",
            "gateway_address": "10.165.19.1",
            "id": "projects/c19c7-c1-dc-hst/regions/asia-south1/subnetworks/c19c7c1pdpap-sb-01",
            "ip_cidr_range": "10.165.19.0/25",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_5_SEC",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "c19c7c1pdpap-sb-01",
            "network": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/global/networks/c19c7c1pdpvc-04",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "c19c7-c1-dc-hst",
            "purpose": "PRIVATE",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/regions/asia-south1/subnetworks/c19c7c1pdpap-sb-01",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.c19c7c1pdpvc-04.google_compute_network.network"
          ]
        },
        {
          "index_key": "asia-south1/c19c7c1pdpdb-sb-01",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-06-01T05:33:22.450-07:00",
            "description": "DB subnet (Prod)",
            "gateway_address": "10.165.19.129",
            "id": "projects/c19c7-c1-dc-hst/regions/asia-south1/subnetworks/c19c7c1pdpdb-sb-01",
            "ip_cidr_range": "10.165.19.128/25",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_5_SEC",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "c19c7c1pdpdb-sb-01",
            "network": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/global/networks/c19c7c1pdpvc-04",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "c19c7-c1-dc-hst",
            "purpose": "PRIVATE",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/regions/asia-south1/subnetworks/c19c7c1pdpdb-sb-01",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.c19c7c1pdpvc-04.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.c19c7c1pdpvc-06",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "description": "External Network VPC (Firewall Management)",
            "id": "projects/c19c7-c1-dc-hst/global/networks/c19c7c1pdpvc-06",
            "mtu": 0,
            "name": "c19c7c1pdpvc-06",
            "project": "c19c7-c1-dc-hst",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/global/networks/c19c7c1pdpvc-06"
          }
        }
      ]
    },
    {
      "module": "module.c19c7c1pdpvc-06-subnets",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "asia-south1/c19c7c1pdpmg-sb-01",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-06-01T05:33:22.533-07:00",
            "description": "FW Subnet (Mgmt)",
            "gateway_address": "10.165.16.129",
            "id": "projects/c19c7-c1-dc-hst/regions/asia-south1/subnetworks/c19c7c1pdpmg-sb-01",
            "ip_cidr_range": "10.165.16.128/25",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_5_SEC",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "c19c7c1pdpmg-sb-01",
            "network": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/global/networks/c19c7c1pdpvc-06",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "c19c7-c1-dc-hst",
            "purpose": "PRIVATE",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/regions/asia-south1/subnetworks/c19c7c1pdpmg-sb-01",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.c19c7c1pdpvc-06.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.c19c7c1pdpvc-07",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": true,
            "description": "Transit Network VPC (Firewall HA)",
            "id": "projects/c19c7-c1-dc-hst/global/networks/c19c7c1pdpvc-07",
            "mtu": 0,
            "name": "c19c7c1pdpvc-07",
            "project": "c19c7-c1-dc-hst",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/global/networks/c19c7c1pdpvc-07"
          }
        }
      ]
    },
    {
      "module": "module.c19c7c1pdpvc-07-routes",
      "mode": "managed",
      "type": "google_compute_route",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "c19c7c1pdprt-03",
          "schema_version": 0,
          "attributes": {
            "description": "Default Route towards FortiGate Firewall  From Firewall Sync VPC  in DC",
            "dest_range": "0.0.0.0/0",
            "id": "projects/c19c7-c1-dc-hst/global/routes/c19c7c1pdprt-03",
            "name": "c19c7c1pdprt-03",
            "network": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/global/networks/c19c7c1pdpvc-07",
            "next_hop_gateway": "",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "10.165.17.253",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 1000,
            "project": "c19c7-c1-dc-hst",
            "self_link": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/global/routes/c19c7c1pdprt-03",
            "tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.c19c7c1pdpvc-07.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.c19c7c1pdpvc-07-subnets",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "asia-south1/c19c7c1pdpha-sb-01",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-06-01T05:33:13.779-07:00",
            "description": "FW Subnet (HA)",
            "gateway_address": "10.165.17.129",
            "id": "projects/c19c7-c1-dc-hst/regions/asia-south1/subnetworks/c19c7c1pdpha-sb-01",
            "ip_cidr_range": "10.165.17.128/25",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_5_SEC",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "c19c7c1pdpha-sb-01",
            "network": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/global/networks/c19c7c1pdpvc-07",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "c19c7-c1-dc-hst",
            "purpose": "PRIVATE",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/c19c7-c1-dc-hst/regions/asia-south1/subnetworks/c19c7c1pdpha-sb-01",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.c19c7c1pdpvc-07.google_compute_network.network"
          ]
        }
      ]
    }
  ]
}